--- a/shoppingList/css/style.css
+++ b/shoppingList/css/style.css
@@ -1,4 +1,4 @@
-@import "/쇼핑리스트/css/reset.css";
+@import "/shoppingList/css/reset.css";
 
 html,body {	margin: 0;	padding: 0;
 
@@ -30,6 +30,7 @@ header {
 img {
     width: 100%;
     height: 80%;
+    object-fit: cover;
 }
 
 p {
