--- a/shoppingList/css/style.css
+++ b/shoppingList/css/style.css
@@ -1,31 +1,136 @@
+/*reset css*/
 @import "/shoppingList/css/reset.css";
 
 html,body {	margin: 0;	padding: 0;
-
+        background-color: rgb(235, 235, 235);
+        font-family: "Gaegu", sans-serif;
+        font-weight: 400;
+        font-style: normal;
 }
 
+
+/** header **/
 header {
     display: flex;
     justify-content: space-between;
     align-items: center;
     position: fixed;
-    background-color: white;
     width: 100%;
     height: 10%;
+    background-color: rgb(217, 217, 217);
+    z-index: 5;
 
 }
 
 #header_logo {
     padding: 3rem;
+    font-size: 40px;
+}
+
+.header_menu {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+}
+
+.header_top {
+    display: flex;
+    flex-direction: column;
     
+}
+
+
+/**banner slide**/
+.slider {
+    overflow: hidden;
+    width: 1100px;
+    height: 300px;
+    box-sizing: border-box;
+    align-self: flex-end;
+    margin-top: 120px;
+    margin-right: 200px;
+
+}
+
+.image-box {
+    width: 4000px;
+    height: 100%;
+    display: flex;
+    flex-wrap: nowrap;
+    animation: bannermove 20s linear infinite;
+}
+
+.image-box > div{
+    margin: 0px -1px 0px 0px;
+}
+
+@keyframes bannermove {
+    0% {
+        transform: translate(0, 0);
+    }
+
+    100% {
+        transform: translate(-50%, 0);
+    }
+}
+
+/**nav**/
+nav {
+    position: fixed;
+    
+    margin-top: 15rem;
+    background-color: white;
+    display: flex;
+    
+    margin-left: 2rem;
+    border-radius: 3%;
+    padding-top: 5rem;
+    padding-bottom: 5rem;
+
+}
+
+
+li {
+    padding: 0.5rem;
+    font-size: 20px;
+    margin:0 3rem;
+}
+
+
+a {
+    text-decoration-line: none;
+    text-decoration-color: none;
+    color: black;
+}
+
+
+li:hover {
+    background-color: rgb(217, 217, 217);
+    
+}
+
+
+a:hover {
+    color: white;
+}
+
+
+/**section**/
+h1 {
+    padding-top: 5rem;
+    
+}
+
+main {
+    padding: 0rem 15rem;
 }
 
 .all {
     display: grid;
-    grid-template-areas: 'a b c d e'
-                         'f g h i j';
-    grid-auto-rows: 20rem;
+    grid-template-rows:1fr 1fr;
+    grid-template-columns: repeat(auto-fit, minmax(170px, 1fr));
     grid-gap:2rem;
+    justify-content: space-evenly;
 }
 img {
     width: 100%;
@@ -39,66 +144,78 @@ p {
 
 .top_wrapper {
     display: grid;
-    grid-template-areas: 'a b c';
-    grid-auto-rows: 20rem;
+    grid-template-rows: 1fr;
+    grid-template-columns: repeat(auto-fit, minmax(170px, 1fr));  
     grid-gap:2rem;
+    justify-content: space-evenly;
 }
 
 .pants_wrapper {
     display: grid;
-    grid-template-areas: 'a b c d';
-    grid-auto-rows: 20rem;
+    grid-template-rows: 1fr;
+    grid-template-columns: repeat(auto-fit, minmax(170px, 1fr)); 
     grid-gap:2rem;
+    justify-content: space-evenly;
 }
 
 .outer_wrapper {
     display: grid;
-    grid-template-areas: 'a b c';
-    grid-auto-rows: 20rem;
+    grid-template-rows: 1fr;
+    grid-template-columns: repeat(auto-fit, minmax(170px, 1fr));
     grid-gap:2rem;
+    justify-content: space-evenly;
 }
 
-h1 {
-    padding-top: 10rem;
+
+.outer, .top, .pants {
+    padding: 1.5rem;
+    background-color: white;
+    border-radius: 3%;
+    transition: all 0.5s;
 }
 
-main {
-    padding: 0rem 15rem;
+.outer:hover, .top:hover, .pants:hover {
+    
+    animation: img_hover 1.5s infinite;
+    
+
 }
 
-.outer .top .pants {
-    display: flex;
-    justify-content: center;
+@keyframes img_hover {
+    0%{
+        transform: scale(1);
+    }
+    50%{
+        transform: scale(1.05);
+        
+    }
+    100%{
+        transform: scale(1);
+    }
 }
 
 p {
     text-align: center;
 }
 
-footer p{
+.fa-heart:hover {
+    color: red;
+}
+
+/*footer*/
+footer {
+    background-color: rgb(207, 207, 207);
+    margin-bottom: 0px;
+    margin-top: 20rem;	padding: 0;
     padding-top: 15rem;
     padding-bottom: 5rem;
 }
 
-nav {
-    position: fixed;
-    padding-left: 6rem;
-    margin-top: 15rem;
-}
 
-.header_menu {
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-}
 
-li {
-    padding: 0.5rem;
-    font-size: 20px;
-}
-
-a {
-    text-decoration-line: none;
-    text-decoration-color: none;
-    color: black;
-}
+@media screen and (max-width : 900px) { 
+    .all, .top_wrapper, .pants_wrapper, .outer_wrapper { 
+        grid-template-columns: repeat(auto-fit, minmax(450px, 1fr));
+        justify-content: center;
+    } 
+  } 
