--- a/shoppingList/css/style.css
+++ b/shoppingList/css/style.css
@@ -5,200 +5,226 @@ html,body {	margin: 0;	padding: 0;
     font-style: normal;
 }
 
+.hidden {
+    display: none;
+}
+
 
 /** header **/
 header {
-display: flex;
-justify-content: space-between;
-flex-direction: row;
-align-items: center;
-position: fixed;
-width: 100%;
-height: 5rem;
-background-color: rgb(217, 217, 217);
-z-index: 1;
+    display: flex;
+    justify-content: space-between;
+    flex-direction: row;
+    align-items: center;
+    position: fixed;
+    width: 100%;
+    height: 5rem;
+    background-color: rgb(217, 217, 217);
+    z-index: 1;
 
 }
 
-.fa-bars, .fa-github {
-padding: 3rem;
-font-size: 40px;
+.sideMenu_btn, .fa-github {
+    padding: 3rem;
+    font-size: 40px;
+    cursor: pointer;
 }
+
 
 .header_menu {
-display: flex;
-flex-direction: column;
-justify-content: flex-start;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
 }
 
 .header_top {
-display: flex;
-flex-direction: column;
+    display: flex;
+    flex-direction: column;
 
 }
 
 
 /**banner slide**/
 .slider {
-overflow: hidden;
-width: 67rem;
-height: 20rem;
-box-sizing: border-box;
-align-self: flex-end;
-margin-top: 120px;
-margin-right: 200px;
+    overflow: hidden;
+    width: 67rem;
+    height: 20rem;
+    box-sizing: border-box;
+    align-self: flex-end;
+    margin-top: 120px;
+    margin-right: 200px;
 
 }
 
 .image-box {
-width: 4000px;
-height: 100%;
-display: flex;
-flex-wrap: nowrap;
-animation: bannermove 20s linear infinite;
+    width: 4000px;
+    height: 100%;
+    display: flex;
+    flex-wrap: nowrap;
+    animation: bannermove 20s linear infinite;
 }
 
-.image-box > div{
-margin: 0px -1px 0px 0px;
-}
 
 @keyframes bannermove {
-0% {
-    transform: translate(0, 0);
-}
+    0% {
+        transform: translate(0, 0);
+    }
 
-100% {
-    transform: translate(-50%, 0);
-}
+    100% {
+        transform: translate(-50%, 0);
+    }
 }
 
 /**nav**/
 .nav_1 {
-position: fixed;  
-margin-top: 15rem;
-background-color: white;
-display: flex;
-margin-left: 2rem;
-border-radius: 3%;
-padding-top: 5rem;
-padding-bottom: 5rem;
+    position: fixed;  
+    margin-top: 15rem;
+    background-color: white;
+    display: flex;
+    margin-left: 2rem;
+    border-radius: 3%;
+    padding-top: 5rem;
+    padding-bottom: 5rem;
 }
 
 
-.nav_select {
-padding: 0.5rem;
-font-size: 20px;
-margin:0 3rem;
+.nav_select,.side_select {
+    padding: 0.5rem;
+    font-size: 20px;
+    margin:0 3rem;
+    cursor: pointer;
+}
+
+.side_select:hover {
+    color: white;
 }
 
 
 .nav_select a {
-text-decoration-line: none;
-text-decoration-color: none;
-color: black;
+    text-decoration-line: none;
+    text-decoration-color: none;
+    color: black;
 }
 
 
 .nav_select:hover {
-background-color: rgb(217, 217, 217);
-
+    background-color: rgb(230, 230, 230);
+    color: rgb(146, 146, 146);
 }
 
 
 a:hover {
-color: white;
+    color: white;
+}
+
+.side_bar {
+    position: absolute;
+    right: 0rem;
+    width: 15rem;
+    height: 50rem;
+    z-index: 2;
+    padding-top: 3rem;
+    background-color: rgb(207, 207, 207);
+}
+
+.back_btn {
+    background: none;
+    border: 0px;
+    font-size: 35px;
+    cursor: pointer;
 }
 
 
 /**section**/
 .sect {
-scroll-margin-top: 6rem;
+    scroll-margin-top: 6rem;
 }
 
 main {
-padding: 0rem 15rem;
+    padding: 0rem 15rem;
 }
 
 .wrapper{
-display: grid;
-grid-template-columns: repeat(auto-fit, minmax(170px, 1fr));
-grid-gap:2rem;
-justify-content: space-evenly;
-margin-bottom: 5rem;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(170px, 1fr));
+    grid-gap:2rem;
+    justify-content: space-evenly;
+    margin-bottom: 5rem;
 }
 
 
 .all_items {
-grid-template-rows:1fr 1fr;   
-padding: 0px;
+    grid-template-rows:1fr 1fr;   
+    padding: 0px;
 }
+
 img {
-width: 100%;
-height: 80%;
-object-fit: cover;
+    width: 100%;
+    height: 80%;
+    object-fit: cover;
 }
 
 p {
-margin: 0.5rem;
+    margin: 0.5rem;
 }
 
 .top_items {
-grid-template-rows: 1fr;
+    grid-template-rows: 1fr;
 }
 
 .pants_items {
-grid-template-rows: 1fr;
-margin-bottom: 5rem;
+    grid-template-rows: 1fr;
+    margin-bottom: 5rem;
 }
 
 .outer_items {
-grid-template-rows: 1fr;
+    grid-template-rows: 1fr;
 
 }
 
 
 .items {
-padding: 1.5rem;
-background-color: white;
-border-radius: 3%;
-transition: all 0.5s;
+    padding: 1.5rem;
+    background-color: white;
+    border-radius: 3%;
+    transition: all 0.5s;
 }
 
 .items:hover {
 
-animation: img_hover 1.5s infinite;
+    animation: img_hover 1.5s infinite;
 
 
 }
 
 @keyframes img_hover {
-0%{
-    transform: scale(1);
-}
-50%{
-    transform: scale(1.05);
-    
-}
-100%{
-    transform: scale(1);
-}
+    0%{
+        transform: scale(1);
+    }
+    50%{
+        transform: scale(1.05);
+        
+    }
+    100%{
+        transform: scale(1);
+    }
 }
 
 p {
-text-align: center;
+    text-align: center;
 }
 
 .fa-heart:hover {
-color: red;
+    color: red;
 }
 
 /*footer*/
 footer {
-background-color: rgb(207, 207, 207);
-margin-bottom: 0px;
-margin-top: 20rem;	padding: 0;
-padding-top: 15rem;
-padding-bottom: 5rem;
+    background-color: rgb(207, 207, 207);
+    margin-bottom: 0px;
+    margin-top: 20rem;	padding: 0;
+    padding-top: 15rem;
+    padding-bottom: 5rem;
 }
 
 
