Feat: 장바구니 페이지 구현

--- a/shoppingList/css/style.css
+++ b/shoppingList/css/style.css
@@ -118,7 +118,7 @@ a:hover {
 }
 
 .side_bar {
-    position: absolute;
+    position: fixed;
     right: 0rem;
     width: 15rem;
     height: 50rem;
