Fix: 홈페이지 로고 수정

--- a/shoppingList/css/style.css
+++ b/shoppingList/css/style.css
@@ -24,7 +24,7 @@ header {
 
 }
 
-.sideMenu_btn, .fa-github {
+.sideMenu_btn, .home_logo {
     padding: 3rem;
     font-size: 40px;
     cursor: pointer;
