--- a/shoppingList/css/style.css
+++ b/shoppingList/css/style.css
@@ -85,6 +85,7 @@ header {
     border-radius: 3%;
     padding-top: 5rem;
     padding-bottom: 5rem;
+
 }
 
 
@@ -125,6 +126,7 @@ a:hover {
     z-index: 2;
     padding-top: 3rem;
     background-color: rgb(207, 207, 207);
+    transition: all .35s;
 }
 
 .back_btn {
